--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -1,1 +1,11 @@
-hola mundo
+
+<!DOCTYPE html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link rel="stylesheet" href="recursos/css/style.css">
+</head>
+<body>
+    <a href="recursos/createpersona.html"><button>Registra persona</button></a>
+    <a href="recursos/personas.html"><button> Listar personas</button></a>
+</body>
+</html>
